# FastAnimals

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
app/: main.py
app/core/: config.py  dependecies.py  exception_handlers.py  logging_config.py  worker_config.py
app/endpoints/: animal.py  animal_endpoint.py  animals.py  api.py  history.py
app/integrations/: abstract_animal.py  common.py  real_animals.py
app/migrations/: env.py
app/migrations/versions/: 088800d836ba_create_animal_table.py  4286a8034b97_.py
app/models/: animal.py  animal_model.py  base.py
app/repositories/: animals.py  animals_repository.py  asbtract_repository.py
app/schemas/: animal.py  animal_schema.py  email.py  problem.py
app/services/: animal.py  email.py  image.py
app/services/animal_service/: animal.py  animals.py  cats.py  dogs.py  foxes.py
app/services/animals/: abstract_animal.py  real_animals.py
tests/: test_integrations.py  test_repository.py
website/: main.py
website/external_api/: animals.py  cats.py  dogs.py  foxes.py  utils.py
